--- a/templates/global/base.html
+++ b/templates/global/base.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% include "partials/head.html" %}
     <title>{% block title %}{% endblock title %}My Translator</title>
 </head>
 <body>
