--- a/templates/global/partials/head.html
+++ b/templates/global/partials/head.html
@@ -1,2 +1,4 @@
+{% load static %}
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{% static 'translations/CSS/style.css' %}">
